--- a/doubanmovie/scrapy.cfg
+++ b/doubanmovie/scrapy.cfg
@@ -9,3 +9,8 @@ default = doubanmovie.settings
 [deploy]
 #url = http://localhost:6800/
 project = doubanmovie
+
+# scrapyd
+[deploy:server-douban]
+url = http://localhost:6800/
+project = douban-movies
